fix: resolve reactive flow errors, fix CORS config, and integrate Keycloak authentication
- Change UserEventProducer.emitUserMessage() to return Mono<Void> for reactive chaining
- Remove duplicated KeycloakService class to avoid bean conflict
- Add Keycloak Admin Client bean to obtain access tokens for API calls
- Fix CORS setAllowedOrigins bug (was overwriting instead of merging)
- Integrate CORS configuration with Spring Security filter chain
- Use admin credentials instead of client_credentials for Keycloak auth
- Add default values for admin-user and admin-password in application.yml